[package]
name = "pydeco"
version = "0.1.1-alpha.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

description   = "Python-like decorator for Rust"
documentation = "https://docs.rs/pydeco"
repository    = "https://github.com/termoshtt/deco"
keywords      = ["proc-macro"]
license       = "MIT"
readme        = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.4"
proc-macro2 = "1.0.12"
syn = { version = "1.0.20", features = ["full", "extra-traits"] }
anyhow = "1.0.28"