[package]
name = "deco"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]

[lib]
proc-macro = true

[dependencies]
synom = "0.11.3"
quote = "0.4"

[dependencies.syn]
version = "0.12"
features = ["full", "fold", "parsing", "printing", "extra-traits"]
default-features = false

